// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authorize 1`] = `
Object {
  "authorized": Object {
    "authorized": true,
  },
  "type": "ACCOUNTS.IS_AUTHORIZED",
}
`;

exports[`clear 1`] = `
Object {
  "field": "personal",
  "type": "ACCOUNTS.REMOVE_DATA",
}
`;

exports[`completeAccount 1`] = `
Object {
  "type": "ACCOUNTS.COMPLETE_ACCOUNT",
}
`;

exports[`error 1`] = `
Object {
  "error": [Error],
  "type": "ACCOUNTS.SET_ERROR",
}
`;

exports[`fail 1`] = `
Object {
  "success": false,
  "type": "ACCOUNTS.SET_SUCCESS",
}
`;

exports[`fix 1`] = `
Object {
  "error": [Error],
  "type": "ACCOUNTS.REMOVE_ERROR",
}
`;

exports[`forgot 1`] = `
Object {
  "forgot": true,
  "type": "ACCOUNTS.SET_FORGOT",
}
`;

exports[`includes types in the export 1`] = `
Object {
  "COMPLETE_ACCOUNT": "ACCOUNTS.COMPLETE_ACCOUNT",
  "IS_AUTHORIZED": "ACCOUNTS.IS_AUTHORIZED",
  "REMOVE_DATA": "ACCOUNTS.REMOVE_DATA",
  "REMOVE_ERROR": "ACCOUNTS.REMOVE_ERROR",
  "REMOVE_ERRORS": "ACCOUNTS.REMOVE_ERRORS",
  "RESET_ACCOUNT": "ACCOUNTS.RESET_ACCOUNT",
  "SET_ACCOUNT_STATUS": "ACCOUNTS.SET_ACCOUNT_STATUS",
  "SET_ALTERNATE_ACCOUNTS": "ACCOUNTS.SET_ALTERNATE_ACCOUNTS",
  "SET_DATA": "ACCOUNTS.SET_DATA",
  "SET_ERROR": "ACCOUNTS.SET_ERROR",
  "SET_ERRORS": "ACCOUNTS.SET_ERRORS",
  "SET_FORGOT": "ACCOUNTS.SET_FORGOT",
  "SET_PEOPLE_WITHOUT_ACCOUNTS": "ACCOUNTS.SET_PEOPLE_WITHOUT_ACCOUNTS",
  "SET_PERSON": "ACCOUNTS.SET_PERSON",
  "SET_STATE": "ACCOUNTS.SET_STATE",
  "SET_SUCCESS": "ACCOUNTS.SET_SUCCESS",
  "SHOW_WELCOME": "ACCOUNTS.SHOW_WELCOME",
}
`;

exports[`loading 1`] = `
Object {
  "state": "loading",
  "type": "ACCOUNTS.SET_STATE",
}
`;

exports[`peopleWithoutAccountEmails 1`] = `
Object {
  "peopleWithoutAccountEmails": Array [
    Object {
      "email": "web@newspring.cc",
      "person": "John Doe",
    },
  ],
  "type": "ACCOUNTS.SET_PEOPLE_WITHOUT_ACCOUNTS",
}
`;

exports[`person 1`] = `
Object {
  "person": Object {
    "person": Object {
      "firstName": "John",
      "lastName": "Doe",
    },
  },
  "type": "ACCOUNTS.SET_PERSON",
}
`;

exports[`remember 1`] = `
Object {
  "forgot": false,
  "type": "ACCOUNTS.SET_FORGOT",
}
`;

exports[`reset 1`] = `
Object {
  "type": "ACCOUNTS.REMOVE_ERRORS",
}
`;

exports[`resetAccount 1`] = `
Object {
  "type": "ACCOUNTS.RESET_ACCOUNT",
}
`;

exports[`save 1`] = `
Object {
  "data": Object {
    "personal": Object {
      "firstName": "James ",
    },
  },
  "type": "ACCOUNTS.SET_DATA",
}
`;

exports[`setAccount 1`] = `
Object {
  "account": Object {
    "1": Object {
      "name": "test",
    },
  },
  "type": "ACCOUNTS.SET_ACCOUNT_STATUS",
}
`;

exports[`setAlternateAccounts 1`] = `
Object {
  "alternateAccounts": Array [],
  "type": "ACCOUNTS.SET_ALTERNATE_ACCOUNTS",
}
`;

exports[`setErrors 1`] = `
Object {
  "errors": Array [],
  "type": "ACCOUNTS.SET_ERRORS",
}
`;

exports[`setState 1`] = `
Object {
  "state": "thinking",
  "type": "ACCOUNTS.SET_STATE",
}
`;

exports[`showWelcome 1`] = `
Object {
  "type": "ACCOUNTS.SHOW_WELCOME",
}
`;

exports[`signin 1`] = `
Object {
  "state": "signin",
  "type": "ACCOUNTS.SET_STATE",
}
`;

exports[`signout 1`] = `
Object {
  "state": "signout",
  "type": "ACCOUNTS.SET_STATE",
}
`;

exports[`success 1`] = `
Object {
  "success": true,
  "type": "ACCOUNTS.SET_SUCCESS",
}
`;
